radio and rating

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <main>
-      
+      @@include('rating/index.html')
     </main>
     <script src="scripts.js"></script>
   </body>
