--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -14,6 +14,7 @@
     <main>
       @@include('rating/index.html')
     </main>
+    @@include('footer/index.html')
     <script src="scripts.js"></script>
   </body>
 </html>
