button, toggle, header

--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -11,8 +11,8 @@
     <title>Home</title>
   </head>
   <body>
+    @@include('header/index.html')
     <main>
-      @@include('rating/index.html')
     </main>
     @@include('footer/index.html')
     <script src="scripts.js"></script>
