--- a/src/pages/main/index.html
+++ b/src/pages/main/index.html
@@ -13,6 +13,7 @@
   <body>
     @@include('header/index.html')
     <main>
+      @@include('registration-form/index.html')
     </main>
     @@include('footer/index.html')
     <script src="scripts.js"></script>
